# clingo-rs

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: rust.yml  test-ci.yml
clingo-sys/: Cargo.toml  README.md  bindings.rs  build.rs  lib.rs
examples/: ast.rs  backend.rs  configuration.rs  control.rs  inject-terms.rs  model.rs  propagator.rs  solve-async.rs  statistics.rs  symbol.rs  symbolic-atoms.rs  theory-atoms.rs
src/: ast.rs  ast_internals.rs  ast_types.rs  bindings.rs  dl_theory.rs  error-actual.txt  lib.rs  theory.rs  version.rs
src/examples/: ast.rs  backend.rs  configuration.rs  control.rs  inject-terms.rs  model.rs  propagator.rs  solve-async.rs  solve-iteratively.rs  statistics.rs  symbol.rs  symbolic-atoms.rs  theory-atoms.rs  version.rs
tests/: clingo-derive.rs  integration_test.rs  propagator.rs
tests/ui/: ast_aggregate.rs  ast_aggregate.stderr  ast_aggregate_guard.rs  ast_aggregate_guard.stderr  ast_binary_operation.rs  ast_binary_operation.stderr  ast_body_literal.rs  ast_body_literal.stderr  ast_body_literal_from_term.rs  ast_body_literal_from_term.stderr  ast_comparison.rs  ast_comparison.stderr  ast_conditional_literal.rs  ast_conditional_literal.stderr  ast_csp_product_term.rs  ast_csp_product_term.stderr  ast_disjunction.rs  ast_disjunction.stderr  ast_external.rs  ast_external.stderr  ast_function.rs  ast_function.stderr  ast_guard.rs  ast_guard.stderr  ast_head_aggregate.rs  ast_head_aggregate.stderr  ast_head_aggregate_element.rs  ast_head_aggregate_element.stderr  ast_head_literal.rs  ast_head_literal.stderr  ast_interval.rs  ast_interval.stderr  ast_literal.rs  ast_literal.stderr  ast_literal_from_comparison.rs  ast_literal_from_comparison.stderr  ast_literal_from_term.rs  ast_literal_from_term.stderr  ast_pool.rs  ast_pool.stderr  (+26 more)
