[package]
name = "clingo"
version = "0.7.0-beta.1"
publish = false
authors = ["sthiele <sthiele78@gmail.com>"]
edition = "2018"
description = "Rust idiomatic bindings to the clingo library"
categories = ["api-bindings"]
license = "MIT"
repository = "https://github.com/potassco/clingo-rs"
documentation = "https://docs.rs/clingo"
readme = "README.md"
exclude = ["/.travis.yml"]

[badges]
travis-ci = { repository = "potassco/clingo-rs" }

[lib]
name = "clingo"
path = "src/lib.rs"

[features]
static_linking = ["clingo-sys/static_linking"]
# dl_theory = ["clingo-dl-sys"]
# Provide derive(ToSymbol) macro.
derive = ["clingo-derive"]

[dependencies]
clingo-sys = { git = "https://github.com/potassco/clingo-sys", branch="st/fix_muability" }
# clingo-dl-sys = { git = "https://github.com/potassco/clingo-dl-sys", branch="main", optional = true}
clingo-derive = { version = "0.2.0", optional = true }
thiserror = "1.0"
bitflags = "1.2"

[dev-dependencies]
rand = "0.8"
trybuild = "1.0"
clingo-derive = { version = "0.2.0" }
test-case = "1.1"
