[package]
name = "clingo"
version = "0.7.0-beta.1"
publish = false
authors = ["sthiele <sthiele78@gmail.com>"]
edition = "2018"
description = "Rust idiomatic bindings to the clingo library"
categories = ["api-bindings"]
license = "MIT"
repository = "https://github.com/potassco/clingo-rs"
documentation = "https://docs.rs/clingo"
readme = "README.md"
exclude = ["/.travis.yml"]

[badges]
travis-ci = { repository = "potassco/clingo-rs" }

[lib]
name = "clingo"
path = "src/lib.rs"

[features]
static-linking = ["clingo-sys/static-linking"]
dl-theory = ["clingo-dl-sys"]
# Provide derive(ToSymbol) macro.
derive = ["clingo-derive"]

[dependencies]
vec1 = "1.8.0"
clingo-sys = { git = "https://github.com/potassco/clingo-sys", branch="st/wip" }
clingo-dl-sys = { git = "https://github.com/potassco/clingo-dl-sys", branch="main", optional = true}
clingo-derive = { version = "0.2.0", optional = true }
thiserror = "1.0"
bitflags = "1.2"

[dev-dependencies]
rand = "0.8"
trybuild = "1.0"
clingo-derive = { version = "0.2.0" }
test-case = "1.1"

[package.metadata.docs.rs]
all-features = false
features = ["dl-theory","static-linking","derive"]
rustdoc-args = ["--cfg", "docsrs"]