[package]
name = "clingo"
version = "0.8.0"
publish = ["crates-io"]
authors = ["sthiele <sthiele78@gmail.com>"]
edition = "2021"
description = "Rust idiomatic bindings to the clingo library"
categories = ["api-bindings"]
license = "MIT"
repository = "https://github.com/potassco/clingo-rs"
documentation = "https://docs.rs/clingo"
readme = "README.md"
exclude = ["/.travis.yml"]

[badges]
travis-ci = { repository = "potassco/clingo-rs" }

[lib]
name = "clingo"
path = "src/lib.rs"

[features]
static-linking = ["clingo-sys/static-linking"]
# Provide derive(ToSymbol) macro.
derive = ["clingo-derive"]

[dependencies]
vec1 = "1.8.0"
clingo-sys =  "=0.7.2"
clingo-derive = { version = "=0.2.0", optional = true }
thiserror = "1.0"
bitflags = "2"

[dev-dependencies]
rand = "=0.8.5"
trybuild = "1.0"
clingo-derive = { version = "=0.2.0" }
test-case = "3"

[package.metadata.docs.rs]
all-features = false
features = ["static-linking","derive"]
rustdoc-args = ["--cfg", "docsrs"]