[package]
name = "clingo-sys"
version = "0.4.0"
authors = ["sthiele <sthiele78@gmail.com>"]
description = "External FFI bindings to the C API of the clingo library"
categories = ["external-ffi-bindings"]
build = "build.rs"
links = "clingo"
license = "MIT"
repository = "https://github.com/sthiele/clingo-rs"
documentation = "https://docs.rs/clingo-sys"

[lib]
name = "clingo_sys"
path = "lib.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
bindgen = "0.45.0"
