[package]
name = "clingo-sys"
version = "0.5.0"
authors = ["sthiele <sthiele78@gmail.com>"]
edition = "2018"
description = "External FFI bindings to the C API of the clingo library"
categories = ["external-ffi-bindings"]
build = "build.rs"
links = "clingo"
license = "MIT"
repository = "https://github.com/potassco/clingo-rs"
documentation = "https://docs.rs/clingo-sys"
readme = "README.md"

[features]
dynamic_linking = []

[lib]
name = "clingo_sys"
path = "lib.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
bindgen = "0.51"
pkg-config = "0.3"
